1.x/README_EN.md
# Spring Boot Examples

this is ablout learn Spring Boot Examples

Demo website：http://www.ityouknow.com/

[Spring Cloud example code](https://github.com/ityouknow/spring-cloud-examples)

[Contribution](https://github.com/ityouknow/spring-boot-examples/issues)&nbsp;| &nbsp;[中文](README.md)

Spring Boot Examples, Use the simplest and most useful scene demo.

- [spring-boot-helloWorld](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-helloWorld)：Spring Boot helloWorld
- [spring-boot-mybaits-annotation](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-mybatis-annotation)：Spring Boot use mybatis annotation
- [spring-boot-mybaits-xml](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-mybatis-xml)：Spring Boot use mybatis xml 
- [spring-boot-mybatis-mulidatasource](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-mybatis-mulidatasource)：Spring Boot+mybatis+mulidatasource
- [spring-boot-mybatis-annotation-mulidatasource](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-mybatis-annotation-mulidatasource)：Spring Boot+ mybatis annotation + mulidatasource
- [spring-boot-thymeleaf](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-thymeleaf)：simple spring boot thymeleaf demo
- [spring-boot-jpa-thymeleaf-curd](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-jpa-thymeleaf-curd)：spring boot + jpa + thymeleaf curd demo
- [spring-boot-rabbitmq](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-rabbitmq)： using AMQP and RabbitMQ
- [spring-boot-scheduler](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-scheduler)：Timed tasks developed using Spring Boot 
- [spring-boot-web](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-web)：Web projects developed using Spring Boot 
- [spring-boot-mail](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-mail)：Mail system developed using Spring Boot 
- [spring-boot-mongodb](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-mongodb)：Spring Boot + Mongodb
- [spring-boot-multi-mongodb](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-multi-mongodb)：Spring Boot + multiMongodb
- [spring-boot-package-war](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-package-war)：Spring Boot package war
- [spring-boot-shiro](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-shiro)：spring boot shiro rbac demo 
- [spring-boot-file-upload](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-file-upload)：Spring Boot upload file demo   
- [spring-boot-fastDFS](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-fastDFS)：Spring Boot Integrate FastDFS  upload delete and so on 
- [spring-boot-actuator](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-actuator)：Spring Boot Actuator demo  
- [spring-boot-admin-simple](https://github.com/ityouknow/spring-boot-examples/tree/master/1.x/spring-boot-admin-simple)：Spring Boot Admin demo    

**[Favorites-web](https://github.com/cloudfavorites/favorites-web)：Open source projects developed using Spring Boot**
