2.x/README_EN.md
# Spring Boot Examples

This tutorial is about learning Spring Boot via examples.

[Spring Cloud Example Code](https://github.com/ityouknow/spring-cloud-examples)  &nbsp;| &nbsp; [中文](README.md)

Spring Boot examples, using the simplest and the most useful scene demos.

---

## Spring Boot 2.X


**[Favorites-web](https://github.com/cloudfavorites/favorites-web)：Open source projects developed using Spring Boot 2.X**

- [spring-boot-hello](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-hello)：Spring Boot 2.0  Hello World Demo
- [spring-boot-banner](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-banner)：Spring Boot Customized Banner 
- [spring-boot-docker](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-docker)：Spring Boot with Docker 
- [dockercompose-springboot-mysql-nginx](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/dockercompose-springboot-mysql-nginx) ：Docker Compose + Spring Boot + Nginx + Mysql example
- [spring-boot-commandLineRunner](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-commandLineRunner) ：Example of resource initialization at project startup using Spring Boot and commandLineRunner  
- [spring-boot-web-thymeleaf](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-web-thymeleaf) ：Spring Boot uses thymeleaf to implement layout, check parameters and CURD
- [spring-boot-memcache-spymemcached](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-memcache-spymemcached) ：Spring Boot uses spymemcached to memcache
- [spring-boot-webflux](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-webflux) ：Spring Boot webflux demo
- [spring-boot-elasticsearch](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-elasticsearch) ：Spring Boot elasticsearch demo
- [spring-boot-swagger](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-swagger) ：Spring Boot swagger2 demo
- [spring-boot-mybatis-plus](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mybatis-plus) ：Spring Boot MyBatis Plus demo


---

## Spring Boot （Already upgraded to 2.x）

- [spring-boot-helloWorld](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-helloWorld)：Spring Boot helloWorld
- [spring-boot-redis](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-redis)：Spring Boot Redis Demo
- [spring-boot-jpa](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-jpa)：Spring Boot  Jpa Demo
- [spring-boot-mybaits-annotation](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mybatis/spring-boot-mybatis-annotation)：Spring Boot use mybatis annotation
- [spring-boot-mybaits-xml](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mybatis/spring-boot-mybatis-xml)：Spring Boot use mybatis xml 
- [spring-boot-mybatis-xml-mulidatasource](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mybatis/spring-boot-mybatis-xml-mulidatasource)：Spring Boot+mybatis+mulidatasource
- [spring-boot-mybatis-annotation-mulidatasource](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mybatis/spring-boot-mybatis-annotation-mulidatasource)：Spring Boot+ mybatis annotation + mulidatasource
- [spring-boot-thymeleaf](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-thymeleaf)：Spring Boot Thymeleaf Demo
- [spring-boot-jpa-thymeleaf-curd](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-jpa-thymeleaf-curd)：spring boot + jpa + thymeleaf curd demo
- [spring-boot-rabbitmq](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-rabbitmq)： using AMQP and RabbitMQ
- [spring-boot-scheduler](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-scheduler)：Timed tasks developed using Spring Boot 
- [spring-boot-web](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-web)：Web projects developed using Spring Boot 
- [spring-boot-mail](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mail)：Mail system developed using Spring Boot 
- [spring-boot-mongodb](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mongodb/spring-boot-mongodb)：Spring Boot + Mongodb
- [spring-boot-multi-mongodb](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-mongodb/spring-boot-multi-mongodb)：Spring Boot + multiMongodb
- [spring-boot-package-war](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-package-war)：Spring Boot package war
- [spring-boot-shiro](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-shiro)：spring boot shiro rbac demo 
- [spring-boot-file-upload](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-file-upload)：Spring Boot upload file demo   
- [spring-boot-fastDFS](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-fastDFS)：Spring Boot Integrate FastDFS  upload delete and so on 
- [spring-boot-actuator](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-actuator)：Spring Boot Actuator demo  
- [spring-boot-admin-simple](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-admin-simple)：Spring Boot Admin demo   
- [spring-boot-banner](https://github.com/ityouknow/spring-boot-examples/tree/master/2.x/spring-boot-banner)：Spring Boot Cumtom Banner 
